fix: ajustar a responsividade do background da home, melhorar a legibilidade do texto e adicionar a logo

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -54,7 +54,7 @@
     }
 
     .redes-sociais{
-        @apply flex items-center text-yellow-600 shadow-lg cursor-pointer transition-all ease-in-out duration-300  hover:scale-110 hover:opacity-70;
+        @apply flex items-center shadow-lg cursor-pointer transition-all ease-in-out duration-300  hover:scale-110 hover:opacity-70;
     }
 
 
